# django_sandbox

./: .gitignore  pyproject.toml
example_celery/: apps.py
example_celery/tasks/: __init__.py  schedule.py
sandbox/: celery.py  settings.py
