[tool.poetry]
name = "django-sandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-celery-beat = "^1.5"
celery = {version = "^4.3", extras = ["redis"]}
ipython = "^7.7"
flower = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
